--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html{
   box-sizing: border-box;
   height: 100%;
+  width: 100%;
 }
 *,
 *::before,
@@ -21,7 +22,7 @@ body{
 .container{
   backdrop-filter: blur(5.5px);
   -webkit-backdrop-filter: blur(5.5px);
-  background: rgba(255,255,255,0.75);
+  background: rgba(255, 255, 255, 0.75);
   border: 1px solid rgba(255, 255, 255, 0.01);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(35, 35, 35, 0.1);
@@ -31,6 +32,67 @@ body{
   background: rgba(255, 255, 255, 0.30);
   border: 1px solid rgba(255, 255, 255, 0.34);
   flex-basis: 400px;
-  height: 250px;
+  height: 540px;
   padding: 20px 35px
+}
+
+.screen{
+  backdrop-filter: blur(5.5px);
+  -webkit-backdrop-filter: blur(5.5);
+  background:rgba(255,255,255,0.75);
+  border: 1px solid rgba(255,255,255,0.01);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(35,35,35,0.1);
+  color: #232323;
+  font-size: 35px;
+  overflow: auto;
+  padding: 20px;
+  text-align: right;
+  width: 326px;
+}
+
+.calc-button-row{
+  display: flex;
+  justify-content: space-between;
+  margin: 5% 0;
+}
+.calc-button{
+  backdrop-filter: blur(5.5px);
+  -webkit-backdrop-filter: blur(5.5px);
+  background: rgba(255, 255, 255, 0.75);
+  border: 1px solid rgba(255,255,255, 0.01);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(35,35,35,0.1);
+  color: #232323;
+  flex-basis: 20%;
+  font-family: inherit;
+  font-size: 24px;
+  height: 65px;
+}
+.calc-button:last-child{
+    backdrop-filter: blur(5.5px);
+    -webkit-backdrop-filter: blur(5.5px);
+    background: rgba(255, 255, 255, 0.75);
+    border: 1px solid rgba(255, 255, 255, 0.01);      
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(35, 35, 35, 0.1);
+    color: #fff;
+    background: #d72880;
+}
+
+.calc-button:last-child:hover{
+  background: inherit;
+  color: inherit;
+} 
+.calc-button:hover{
+  background-color: inherit;
+}
+.calc-button:active{
+  background-color: #ffef78;
+}
+.double{
+  flex-basis: 47%;
+}
+.triple{
+  flex-basis: 73%;
 }
